test/scc/ext/tm/semantic-errors/014.a
014.t:8:12: error: volatile objects cannot be used within _Atomic block